--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -81,3 +81,8 @@ textarea:focus {
     /* border: black 1px solid; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.dialogCSS {
+    transform: translateX(100%) !important;
+    transition: transform 0.4s ease-in-out;
+}
