--- a/src/components/Todos/Todos.module.css
+++ b/src/components/Todos/Todos.module.css
@@ -7,6 +7,7 @@
     border-radius: 16px;
     padding: 20px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .todoTitle {
@@ -14,6 +15,7 @@
     font-size: 20px;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 10px;
 }
 
 .deleteButton {
@@ -69,4 +71,5 @@
 
 .description {
     font-size: 20px;
+    margin-bottom: 10px;
 }
